--- a/plantapp_ui/pubspec.yaml
+++ b/plantapp_ui/pubspec.yaml
@@ -18,5 +18,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/plant_img_1.jpg
+    - assets/plant_img_2.png
     - assets/bg_img_1.webp
