Main Container added (images, text and button)

--- a/plantapp_ui/pubspec.yaml
+++ b/plantapp_ui/pubspec.yaml
@@ -22,3 +22,7 @@ flutter:
     - assets/bg_img_1.webp
     - assets/listView_plant.png
     - assets/snakePlant.png
+    - assets/height.png
+    - assets/potted-plant.png
+    - assets/temperature.png
+    - assets/shopping-bag.png
